# fcgr

./: .gitignore  CMakeLists.txt  README.md  main.cpp
example/: 1.fa  2.fa  3.fa
